MDEV-15871 Crash in btr_search_build_page_hash_index()

When skipping the MDEV-11369 'default row' record, check again
for an empty page.